--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,8 +11,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+    <service android:enabled="true" android:name=".GpsSignalService" />
     </application>
     <uses-sdk android:minSdkVersion="4" />
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"/>
 
-</manifest> 
+</manifest>
