--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,7 @@
       android:versionCode="1"
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+        <uses-permission android:name="android.permission.INSTALL_LOCATION_PROVIDER" />
         <activity android:name=".MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
@@ -11,11 +12,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    <service android:enabled="true" android:name=".GpsSignalService" />
+    <service android:enabled="true" android:name=".GpsSignalService" >
+        <uses-permission android:name="android.permission.INSTALL_LOCATION_PROVIDER" />
+    </service>
     </application>
-    <uses-sdk android:minSdkVersion="4" />
+    <uses-sdk android:minSdkVersion="7" />
+    <uses-permission android:name="android.permission.INSTALL_LOCATION_PROVIDER" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"/>
+<!-- <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"/>  -->
 
 </manifest>
