--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,13 +5,14 @@
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".MainActivity"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    <service android:enabled="true" android:name=".GpsSignalService" />
+    <service android:enabled="true" android:name=".GpsSignalService"/>
     </application>
     <uses-sdk android:minSdkVersion="4" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
