--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    <service android:enabled="true" android:name=".GpsSignalService"/>
+    <service android:enabled="true" android:name=".GpsSignalService" android:process=":service">
+        <intent-filter>
+            <action android:name="com.amay077.android.gpsfaker.IGpsSignalService"  />
+        </intent-filter>
+    </service>
     </application>
     <uses-sdk android:minSdkVersion="4" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
