--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,13 @@
       package="com.amay077.android.gpsfaker"
       android:versionCode="1"
       android:versionName="1.0">
+      
+    <uses-sdk android:minSdkVersion="4" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    
+    
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".MainActivity"
                   android:label="@string/app_name"
@@ -12,16 +19,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<!--     <service android:enabled="true" android:name=".GpsSignalService" android:process=":service"> -->
-    <service android:enabled="true" android:name=".GpsSignalService">
-        <intent-filter>
-            <action android:name="com.amay077.android.gpsfaker.IGpsSignalService"  />
-        </intent-filter>
-    </service>
     </application>
-    <uses-sdk android:minSdkVersion="4" />
-	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"/>
 
 </manifest>
