--- a/gpsfaker/project.properties
+++ b/gpsfaker/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=Google Inc.:Google APIs:7
-android.library.reference.1=../../amay077lib_ws/amay077lib
+android.library.reference.1=../amay077lib
