--- a/gpsfaker/AndroidManifest.xml
+++ b/gpsfaker/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     
     
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:name=".MyApplication">
         <activity android:name=".MainActivity"
                   android:label="@string/app_name"
                   android:launchMode="singleTop">
